skinning the app

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#8b5cf6" />
     <title>Silent - Private Messaging on Nostr</title>
     <meta name="description" content="End-to-end encrypted messaging powered by Nostr. Signal-like privacy with decentralized infrastructure." />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Silent - Private Messaging on Nostr" />
     <meta property="og:description" content="End-to-end encrypted messaging powered by Nostr. Signal-like privacy with decentralized infrastructure." />
     <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' blob: https:">
+    <link rel="icon" type="image/svg+xml" href="/icon.svg">
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="apple-touch-icon" href="/icon-192.png">
   </head>
   <body>
     <div id="root"></div>
